@startuml
class Curve{
	-x : tenor
	-y : yields
	+set_curve(x,y)
	+interpolate(method,new_tenor)
}

class TsyYldCurve{
	+__call__()
	+getForwardCurve()
}

class ForwardCurve{
	+__call__()
	+generateSpotCurve()
}

class SpotRateCurve{
	+__call__()
	+generateForwardCurve()
}

TsyYldCurve -up--|> Curve
SpotRateCurve -up--|> Curve
ForwardCurve -up--|> Curve


class IRModels{
	-arg
	-x: maturities
	-y: yields
	-vol: vol term structure
	-opt: option data [K, t, T]
}

class Vasicek{
	-args
	+__call__(opt,method,arg)
	+P(arg,tao)
	+clalibarte()
	+optionPirce()
	+MC(step,rounds)
}

class BDT{
	+__call__(opt,method)
	+clalibarte()
	+def SSE(args)
}

IRModels <|-- Vasicek
IRModels <|-- BDT

class BondOptionPricer{
	-opt
	-spot_df
	-step
	-window_len
	-model_type
	-rounds
	-model
	+spotBootstrapping()
	+volStructure()
	+calibrateIRModel()
	+getOptionPrice()
}

BondOptionPricer o-- IRModels
Curve -right--o IRModels


@enduml